<resources>
    <string name="app_name">Round Up</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="upload_image">Upload an Image</string>
    <string name="or">OR</string>
    <string name="search_by_text">Search By Text</string>
    <string name="submit">Submit</string>
    <string name="searching_text">Searching Text</string>
    <string name="done">Done</string>
    <string name="start">start</string>
    <string name="next">next</string>
    <string name="back">Back</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_code_desc">Verification code has been sent to your\nmobile number.Please wait\nwe are verifying you.</string>
    <string name="continu">Continue</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_otp_error">Please enter given OTP.</string>
    <string name="latest_videos">Latest Videos</string>
    <string name="view_all">View All</string>
    <string name="select_picture">Select or capture one picture with search text.</string>
    <string name="camera">Camera</string>
    <string name="browse">Browse</string>
    <string name="cancel">Cancel</string>
    <string name="pdf">PDF</string>
    <string name="video">VIDEO</string>
    <string name="solution">SOLUTION</string>
    <string name="testtxt">TEST</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="update">JOB\n NOTIFICATION</string>
    <string name="aboutus">ABOUT US</string>
    <string name="aboutussmall">About us</string>
    <string name="share">SHARE</string>
    <string name="feedback">SUBMIT QUERY</string>
    <string name="contact">CONTACT US</string>
    <string name="banking_exam_video">Banking Exams Videos</string>
    <string name="ins_exam_video">Insurance Exams Videos</string>
    <string name="entermobileno">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="termsconditions"><![CDATA[Terms & Condition]]></string>
    <string name="iagreetermcondition">I agree</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="library">Library</string>
    <string name="mobileno">Mobile No</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="notification">Notification</string>
    <string name="sliderone">Doubt clearing app\n seekho aram se</string>
    <string name="slidertwo">Paao Apne Doubts Ka\n Instant Solution bas\n ek click pe</string>
    <string name="sliderthree">Seekho, pado\n apne hisab se</string>
    <string name="test">Test</string>
</resources>
